// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exportPreviews command cli --minify runs on templates 1`] = `
"mailing Exporting minified preview html to
mailing ./previews_html/
mailing   |-- new_sign_in_new_sign_in.html
mailing   |-- reset_password_reset_password.html
mailing   |-- reservation_reservation_confirmed.html
mailing   |-- reservation_reservation_changed.html
mailing   |-- reservation_reservation_with_error.html
mailing   |-- account_created_account_created.html
mailing ✅ Processed 6 previews

"
`;

exports[`exportPreviews command cli halts on lint errors runs on templates 1`] = `""`;

exports[`exportPreviews command cli runs on templates 1`] = `
"mailing Exporting preview html to
mailing ./previews_html/
mailing   |-- account_created_account_created.html
mailing   |-- new_sign_in_new_sign_in.html
mailing   |-- reservation_reservation_with_error.html
mailing   |-- reservation_reservation_confirmed.html
mailing   |-- reservation_reservation_changed.html
mailing   |-- reset_password_reset_password.html
mailing ✅ Processed 6 previews

"
`;
